# pdf-parser

./: .gitignore  README.md  extraction_test.ipynb  pyproject.toml
src/: data_extractor.py  raw_extractor.py  schema_transformer.py
